# federal-carbon-footprint

./: .gitignore  .prettierrc  CONTRIBUTING.md  README.md  jest.config.cjs  package-lock.json  package.json  postcss.config.cjs  pyproject.toml  svelte.config.js  tsconfig.json  vite.config.js  vitest.config.js
data/: __main__.py  context.py  pyproject.toml
data/elt/extract/: __init__.py  dummy.py
docs/: data-inventory.md  use-cases.md
docs/adr/: 0001-record-architecture-decisions.md  0002-prototyping-strategy.md  0003-data-management.md  README.md  TEMPLATE.md
src/: app.html
src/components/: AgencyImpactFilterForm.svelte  Banner.svelte  BetaBanner.svelte  Breadcrumb.svelte  Footer.svelte  Header.svelte  PieChart.svelte  Sankey.svelte  SectorSummary.svelte
src/context/: backend.ts  frontend.ts
src/data/: context.ts  index.ts
src/data/adapters/: usaspending.int.test.ts  usaspending.ts  useeio.int.test.ts  useeio.test.ts
src/data/domain/: naics.ts
src/data/raw/: README.md  naics.json
src/data/sources/: fuel-usage.ts  usaspending.int.test.ts  usaspending.test.ts  usaspending.ts  useeio.int.test.ts  (+2 more)
src/lib/: result.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts  __layout.svelte  _context.ts  about.svelte  index.json.ts  index.svelte
src/styles/: _uswds-theme-overrides.scss  app.scss
src/web/: package-lock.json  package.json  project-config.js  tsconfig.json
web/: .prettierrc  README.md  package-lock.json  package.json  postcss.config.cjs  project-config.js  snowpack.config.js  svelte.config.js  tsconfig.json
web/src/: app.html  index.ts
(+99 files in other folders)
