[tool.poetry]
name = "federal-carbon-footprint"
version = "0.1.0"
description = "Visualizing the Federal Carbon Footprint"
authors = ["Daniel Naab <daniel.naab@gsa.gov>"]
license = "CC0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
